src2/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Academic_Title__c</fullName>
        <label>Academic Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NN02_1</fullName>
                </value>
                <value>
                    <fullName>NN02_2</fullName>
                </value>
                <value>
                    <fullName>NN01_1</fullName>
                </value>
                <value>
                    <fullName>NN01_2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Channel__c</fullName>
        <formula>IF(TEXT(Account.Channel__c)=&apos;1&apos;,&apos;Nespresso&apos;,IF(TEXT(Account.Channel__c)=&apos;2&apos;,&apos;NesPro&apos;,&apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Club_Member__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Club Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>AddressType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Category__c</fullName>
        <label>Agent Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZZZ</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Agent / Distributor</label>
                </value>
                <value>
                    <fullName>C4C</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                    <label>Commercial Manager  B2B</label>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                    <label>Direct Sales / Other (BO)</label>
                </value>
                <value>
                    <fullName>FAS</fullName>
                    <label>FASSK</label>
                </value>
                <value>
                    <fullName>HKM</fullName>
                    <label>Horeca Key Account Manager</label>
                </value>
                <value>
                    <fullName>HM</fullName>
                    <label>Horeca Sales Manager</label>
                </value>
                <value>
                    <fullName>HSF</fullName>
                    <label>Horeca Salesforce</label>
                </value>
                <value>
                    <fullName>KA</fullName>
                    <label>Key Account Manager</label>
                </value>
                <value>
                    <fullName>MS</fullName>
                    <label>Mixed Salesforce</label>
                </value>
                <value>
                    <fullName>NOM</fullName>
                    <label>NOMAD</label>
                </value>
                <value>
                    <fullName>OAM</fullName>
                    <label>Office Account Manager</label>
                </value>
                <value>
                    <fullName>OKM</fullName>
                    <label>Office Key Account Manager</label>
                </value>
                <value>
                    <fullName>OM</fullName>
                    <label>Office Sales Manager</label>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>SF</fullName>
                    <label>Office Salesforce</label>
                </value>
                <value>
                    <fullName>SM</fullName>
                    <label>Sales (Zone) Manager</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <label>Salespartner</label>
                </value>
                <value>
                    <fullName>SSH</fullName>
                    <label>Sales &amp; Service Partner Horeca</label>
                </value>
                <value>
                    <fullName>SSP</fullName>
                    <label>Sales &amp; Service Partner Office</label>
                </value>
                <value>
                    <fullName>TEC</fullName>
                    <label>Technician</label>
                </value>
                <value>
                    <fullName>TS</fullName>
                    <label>TeleSales</label>
                </value>
                <value>
                    <fullName>TSM</fullName>
                    <label>Technical Service Manager</label>
                </value>
                <value>
                    <fullName>TSP</fullName>
                    <label>Technical Service Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Reached_by__c</fullName>
        <label>Best Reached by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>SMS</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Social media</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Postmail</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>The address id in Nessoft.</description>
        <label>Contact Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactUUID__c</fullName>
        <externalId>true</externalId>
        <label>Contact UUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <label>Contact Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                </value>
                <value>
                    <fullName>0002</fullName>
                </value>
                <value>
                    <fullName>0003</fullName>
                </value>
                <value>
                    <fullName>0004</fullName>
                </value>
                <value>
                    <fullName>0005</fullName>
                </value>
                <value>
                    <fullName>0006</fullName>
                </value>
                <value>
                    <fullName>0007</fullName>
                </value>
                <value>
                    <fullName>0008</fullName>
                </value>
                <value>
                    <fullName>0009</fullName>
                </value>
                <value>
                    <fullName>0010</fullName>
                </value>
                <value>
                    <fullName>0011</fullName>
                </value>
                <value>
                    <fullName>0012</fullName>
                </value>
                <value>
                    <fullName>0013</fullName>
                </value>
                <value>
                    <fullName>0014</fullName>
                </value>
                <value>
                    <fullName>0015</fullName>
                </value>
                <value>
                    <fullName>0016</fullName>
                </value>
                <value>
                    <fullName>0017</fullName>
                </value>
                <value>
                    <fullName>0018</fullName>
                </value>
                <value>
                    <fullName>0019</fullName>
                </value>
                <value>
                    <fullName>0020</fullName>
                </value>
                <value>
                    <fullName>0021</fullName>
                </value>
                <value>
                    <fullName>0022</fullName>
                </value>
                <value>
                    <fullName>0023</fullName>
                </value>
                <value>
                    <fullName>0024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Function__c</fullName>
        <label>Contact Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                </value>
                <value>
                    <fullName>0002</fullName>
                </value>
                <value>
                    <fullName>0003</fullName>
                </value>
                <value>
                    <fullName>0004</fullName>
                </value>
                <value>
                    <fullName>0005</fullName>
                </value>
                <value>
                    <fullName>0006</fullName>
                </value>
                <value>
                    <fullName>0007</fullName>
                </value>
                <value>
                    <fullName>0008</fullName>
                </value>
                <value>
                    <fullName>0009</fullName>
                </value>
                <value>
                    <fullName>0010</fullName>
                </value>
                <value>
                    <fullName>0011</fullName>
                </value>
                <value>
                    <fullName>0012</fullName>
                </value>
                <value>
                    <fullName>0013</fullName>
                </value>
                <value>
                    <fullName>0014</fullName>
                </value>
                <value>
                    <fullName>0015</fullName>
                </value>
                <value>
                    <fullName>0016</fullName>
                </value>
                <value>
                    <fullName>0017</fullName>
                </value>
                <value>
                    <fullName>0018</fullName>
                </value>
                <value>
                    <fullName>0019</fullName>
                </value>
                <value>
                    <fullName>0020</fullName>
                </value>
                <value>
                    <fullName>0021</fullName>
                </value>
                <value>
                    <fullName>0022</fullName>
                </value>
                <value>
                    <fullName>0023</fullName>
                </value>
                <value>
                    <fullName>0024</fullName>
                </value>
                <value>
                    <fullName>0025</fullName>
                </value>
                <value>
                    <fullName>0026</fullName>
                </value>
                <value>
                    <fullName>0027</fullName>
                </value>
                <value>
                    <fullName>0028</fullName>
                </value>
                <value>
                    <fullName>0029</fullName>
                </value>
                <value>
                    <fullName>0030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultLanguage__c</fullName>
        <label>Default Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_DefaultLanguage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <label>Do Not Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasOptOutOfPostMail__c</fullName>
        <label>Has Opted Out Of Post Mail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasOptOutOfSMS__c</fullName>
        <label>Has Opted Out Of SMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <label>Has Opted Out Of Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsBillingAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShippingAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Invoice_Receiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invoice Receiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastUpdate_Address__c</fullName>
        <label>Last Update (Address)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastUpdate_Contact__c</fullName>
        <label>Last Update (Contact)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Main_Phone__c</fullName>
        <label>Main Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MobilePhone2__c</fullName>
        <label>Mobile 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nespro_Area__c</fullName>
        <label>Nespro Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NN09_Z</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonContactAddressId__c</fullName>
        <description>The address id related to the contact person in Nessoft.</description>
        <label>Person Contact Address ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonContactId__c</fullName>
        <label>Person Contact ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonContactUUID__c</fullName>
        <externalId>true</externalId>
        <label>Person Contact UUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProPhone2__c</fullName>
        <label>Pro 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reason_of_deactivation__c</fullName>
        <label>Reason of deactivation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>Contact left the Company</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>Contact is on sick Leave</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>Contact person has changed position</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>Account.ShippingStreet+Br()+Account.ShippingCity+BR()+Account.ShippingState+&apos; &apos;+Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>api</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Internal_Contact</fullName>
        <active>true</active>
        <label>Internal Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Address</fullName>
        <active>true</active>
        <label>Nespresso Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Agent</fullName>
        <active>true</active>
        <label>Nespresso Agent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Person_Contact</fullName>
        <active>true</active>
        <label>Nespresso Person Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nespresso_Third_Party</fullName>
        <active>true</active>
        <label>Nespresso Third Party</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>